Continuing length counter level

--- a/src/data/levels/05c_APU/08_Pulse Channels 3-5 - Length counter/chat/en.yml
+++ b/src/data/levels/05c_APU/08_Pulse Channels 3-5 - Length counter/chat/en.yml
@@ -68,7 +68,7 @@ exercise:
     📚  in 🟦  `PulseChannel`:
     **->** import that class and add a `lengthCounter` property with a new instance
     **->** modify **sample()**, so if ```javascript !this.isEnabled()``` or the length counter is not active, it returns the last generated sample, without changing anything
-    **->** add the methods described below
+    **->** add the following methods:
     **quarterFrame()**:
       **[!]** leave empty for now
     **halfFrame()**:
